Fix for header wrong color on scrollDown

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -80,6 +80,13 @@
       background: -webkit-linear-gradient(to left, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
       background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     }
+    &_disappeared{
+      @extend .header-default_dark;
+      top : -5rem;
+      @media (max-width : 550px) {
+      top : -4.2rem;
+      }
+    }
   }
 }
 
